Add comprehensive tests for DocumentorPackageUtils and DocumentorTestApplication to improve coverage